// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. mobile primary image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<ArticleImageNative
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "primary",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
  onImagePress={null}
>
  <div
    className="css-view-1dbjc4n r-flexDirection-eqz5dr r-paddingBottom-19yat4t r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <TimesImage
        aspectRatio={1.25}
        caption={
          <Caption
            credits="Some credits"
            text="Some caption"
          />
        }
        disablePlaceholder={false}
        fadeImageIn={false}
        highResSize={null}
        lowResSize={null}
        onImagePress={null}
        rounded={false}
        uri="https://img/someImage"
      />
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <responsiveweb__InsetCaptionStyle>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2",
                "isStatic": true,
                "lastClassName": "c1",
                "rules": Array [
                  "padding-left:",
                  "10px",
                  ";@media (min-width:",
                  "768",
                  "px){padding-left:0px;}",
                ],
              },
              "displayName": "responsiveweb__InsetCaptionStyle",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c1 responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2 c1 css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n"
            >
              <div
                className="css-view-1dbjc4n r-paddingTop-m611by"
              >
                <div
                  className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
                >
                  Some caption
                </div>
                <div
                  className="css-text-76zvg2 r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
                >
                  SOME CREDITS
                </div>
              </div>
            </div>
          </div>
        </StyledComponent>
      </responsiveweb__InsetCaptionStyle>
    </div>
  </div>
</ArticleImageNative>
`;

exports[`2. tablet primary image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<ArticleImageNative
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "primary",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
  onImagePress={null}
>
  <div
    className="css-view-1dbjc4n r-flexDirection-eqz5dr r-paddingBottom-19yat4t r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <TimesImage
        aspectRatio={1.25}
        caption={
          <Caption
            credits="Some credits"
            text="Some caption"
          />
        }
        disablePlaceholder={false}
        fadeImageIn={false}
        highResSize={null}
        lowResSize={null}
        onImagePress={null}
        rounded={false}
        uri="https://img/someImage"
      />
    </div>
    <div
      className="css-view-1dbjc4n"
    >
      <responsiveweb__InsetCaptionStyle>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2",
                "isStatic": true,
                "lastClassName": "c1",
                "rules": Array [
                  "padding-left:",
                  "10px",
                  ";@media (min-width:",
                  "768",
                  "px){padding-left:0px;}",
                ],
              },
              "displayName": "responsiveweb__InsetCaptionStyle",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c1 responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2 c1 css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n"
            >
              <div
                className="css-view-1dbjc4n r-paddingTop-m611by"
              >
                <div
                  className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
                >
                  Some caption
                </div>
                <div
                  className="css-text-76zvg2 r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
                >
                  SOME CREDITS
                </div>
              </div>
            </div>
          </div>
        </StyledComponent>
      </responsiveweb__InsetCaptionStyle>
    </div>
  </div>
</ArticleImageNative>
`;

exports[`3. mobile fullwidth image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<ArticleImageNative
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "fullwidth",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
  onImagePress={null}
>
  <div
    className="css-view-1dbjc4n r-marginBottom-15d164r r-marginHorizontal-1jgb5lz r-maxWidth-11gaior"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <TimesImage
        aspectRatio={1.25}
        caption={
          <Caption
            credits="Some credits"
            text="Some caption"
          />
        }
        disablePlaceholder={false}
        fadeImageIn={false}
        highResSize={null}
        lowResSize={null}
        onImagePress={null}
        rounded={false}
        uri="https://img/someImage"
      />
    </div>
    <div
      className="css-view-1dbjc4n r-alignSelf-1kihuf0 r-maxWidth-1cmskyw"
    >
      <CentredCaption
        credits="Some credits"
        text="Some caption"
      >
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n r-paddingTop-m611by"
          >
            <div
              className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
            >
              Some caption
            </div>
            <div
              className="css-text-76zvg2 r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
            >
              SOME CREDITS
            </div>
          </div>
        </div>
      </CentredCaption>
    </div>
  </div>
</ArticleImageNative>
`;

exports[`4. tablet fullwidth image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<ArticleImageNative
  captionOptions={
    Object {
      "caption": "Some caption",
      "credits": "Some credits",
    }
  }
  imageOptions={
    Object {
      "display": "fullwidth",
      "ratio": "15:12",
      "uri": "https://img/someImage",
    }
  }
  onImagePress={null}
>
  <div
    className="css-view-1dbjc4n r-marginBottom-15d164r r-marginHorizontal-1jgb5lz r-maxWidth-11gaior"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <TimesImage
        aspectRatio={1.25}
        caption={
          <Caption
            credits="Some credits"
            text="Some caption"
          />
        }
        disablePlaceholder={false}
        fadeImageIn={false}
        highResSize={null}
        lowResSize={null}
        onImagePress={null}
        rounded={false}
        uri="https://img/someImage"
      />
    </div>
    <div
      className="css-view-1dbjc4n r-alignSelf-1kihuf0 r-maxWidth-1cmskyw"
    >
      <CentredCaption
        credits="Some credits"
        text="Some caption"
      >
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n r-paddingTop-m611by"
          >
            <div
              className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
            >
              Some caption
            </div>
            <div
              className="css-text-76zvg2 r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
            >
              SOME CREDITS
            </div>
          </div>
        </div>
      </CentredCaption>
    </div>
  </div>
</ArticleImageNative>
`;

exports[`5. secondary image with caption and credits 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<ArticleImageNative
  captionOptions={
    Object {
      "caption": "Another caption",
      "credits": "Other credits",
    }
  }
  imageOptions={
    Object {
      "display": "secondary",
      "ratio": "3:2",
      "uri": "https://img/someImage",
    }
  }
  onImagePress={null}
>
  <div
    className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-tzz3ar r-paddingBottom-k8qxaj r-paddingLeft-1hfyk0a r-paddingRight-1qfoi16 r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-width-1f720gc"
    >
      <TimesImage
        aspectRatio={1.5}
        caption={
          <Caption
            credits="Other credits"
            text="Another caption"
          />
        }
        disablePlaceholder={false}
        fadeImageIn={false}
        highResSize={null}
        lowResSize={null}
        onImagePress={null}
        rounded={false}
        uri="https://img/someImage"
      />
    </div>
    <div
      className="css-view-1dbjc4n r-paddingLeft-1hfyk0a r-paddingTop-wk8lta r-width-1f720gc"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-paddingTop-wk8lta"
        >
          <div
            className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
          >
            Another caption
          </div>
          <div
            className="css-text-76zvg2 r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
          >
            OTHER CREDITS
          </div>
        </div>
      </div>
    </div>
  </div>
</ArticleImageNative>
`;

exports[`6. primary image with caption and credits with center caption override 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  padding-left: 10px;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 0px;
  }
}

<ContextProviderWithDefaults
  value={
    Object {
      "theme": Object {
        "imageCaptionAlignment": Object {
          "primary": "center",
        },
      },
    }
  }
>
  <ArticleImageNative
    captionOptions={
      Object {
        "caption": "Some caption",
        "credits": "Some credits",
      }
    }
    imageOptions={
      Object {
        "display": "primary",
        "ratio": "15:12",
        "uri": "https://img/someImage",
      }
    }
    onImagePress={null}
  >
    <div
      className="css-view-1dbjc4n r-flexDirection-eqz5dr r-paddingBottom-19yat4t r-width-13qz1uu"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <TimesImage
          aspectRatio={1.25}
          caption={
            <Caption
              credits="Some credits"
              text="Some caption"
            />
          }
          disablePlaceholder={false}
          fadeImageIn={false}
          highResSize={null}
          lowResSize={null}
          onImagePress={null}
          rounded={false}
          uri="https://img/someImage"
        />
      </div>
      <div
        className="css-view-1dbjc4n"
      >
        <InsetCenteredCaption
          credits="Some credits"
          text="Some caption"
        >
          <responsiveweb__InsetCaptionStyle>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "padding-left:",
                      "10px",
                      ";@media (min-width:",
                      "768",
                      "px){padding-left:0px;}",
                    ],
                  },
                  "displayName": "responsiveweb__InsetCaptionStyle",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2",
                  "target": [Function],
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c1 responsiveweb__InsetCaptionStyle-sc-1gt1h9z-2 c1 css-view-1dbjc4n"
              >
                <CentredCaption
                  credits="Some credits"
                  text="Some caption"
                >
                  <div
                    className="css-view-1dbjc4n"
                  >
                    <div
                      className="css-view-1dbjc4n r-paddingTop-m611by"
                    >
                      <div
                        className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
                      >
                        Some caption
                      </div>
                      <div
                        className="css-text-76zvg2 r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
                      >
                        SOME CREDITS
                      </div>
                    </div>
                  </div>
                </CentredCaption>
              </div>
            </StyledComponent>
          </responsiveweb__InsetCaptionStyle>
        </InsetCenteredCaption>
      </div>
    </div>
  </ArticleImageNative>
</ContextProviderWithDefaults>
`;

exports[`7. secondary image with caption and credits with center caption override 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<ContextProviderWithDefaults
  value={
    Object {
      "theme": Object {
        "imageCaptionAlignment": Object {
          "secondary": "center",
        },
      },
    }
  }
>
  <ArticleImageNative
    captionOptions={
      Object {
        "caption": "Another caption",
        "credits": "Other credits",
      }
    }
    imageOptions={
      Object {
        "display": "secondary",
        "ratio": "3:2",
        "uri": "https://img/someImage",
      }
    }
    onImagePress={null}
  >
    <div
      className="css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-tzz3ar r-paddingBottom-k8qxaj r-paddingLeft-1hfyk0a r-paddingRight-1qfoi16 r-width-13qz1uu"
    >
      <div
        className="css-view-1dbjc4n r-width-1f720gc"
      >
        <TimesImage
          aspectRatio={1.5}
          caption={
            <Caption
              credits="Other credits"
              text="Another caption"
            />
          }
          disablePlaceholder={false}
          fadeImageIn={false}
          highResSize={null}
          lowResSize={null}
          onImagePress={null}
          rounded={false}
          uri="https://img/someImage"
        />
      </div>
      <div
        className="css-view-1dbjc4n r-paddingLeft-1hfyk0a r-paddingTop-wk8lta r-width-1f720gc"
      >
        <CentredCaption
          credits="Other credits"
          text="Another caption"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-view-1dbjc4n r-paddingTop-wk8lta"
            >
              <div
                className="css-text-76zvg2 r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0"
              >
                Another caption
              </div>
              <div
                className="css-text-76zvg2 r-color-1khnkhu r-fontFamily-j2s0nr r-fontSize-qqjak8 r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-5fcqz0"
              >
                OTHER CREDITS
              </div>
            </div>
          </div>
        </CentredCaption>
      </div>
    </div>
  </ArticleImageNative>
</ContextProviderWithDefaults>
`;
